--- a/style.css
+++ b/style.css
@@ -28,4 +28,4 @@ grid-gap: 16px;box-shadow: 1px 1px 10px rgba(0,0,0,0.1);
 	padding: 20px;
 border-radius: 3px;
 margin:35px; background-color: rgb(220,220,220);}
-.photo-left(text-align: center)
+.photo-left{text-align: center}
